--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta http-equiv="refresh" content="0; url=https://github.com/amandaviceconte/pokedex/blob/master/public/index.html" />
+  <meta http-equiv="refresh" content="0; url=https://amandaviceconte.github.io/pokedex/public/index.html" />
 </head>
 
 <body>
